--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "heapdump": "^0.3.5",
+    "heapsnapshot-parser": "^0.1.0",
     "v8-profiler": "^5.2.9"
   }
 }
